kubernetes/apps/base/remote/openssh/policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: remote
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-remote-access
  namespace: remote
spec:
  podSelector: {}
  egress:
    - to:
        # Only allow egress to LAN
        - ipBlock:
            cidr: 192.168.10.0/24
        - ipBlock:
            cidr: fdd5:aa8:9535:10::/64
  policyTypes:
    - Egress
